<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        app:cardBackgroundColor="@color/transparentBlack"
        app:cardCornerRadius="7sp"
        app:cardElevation="3sp">

        <LinearLayout
            android:orientation="vertical"
            android:padding="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="30sp"
                android:text="@string/existing_ac"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_id" />

            <EditText
                android:id="@+id/sidfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4sp"
                android:layout_marginRight="-4sp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:maxLength="90"
                android:inputType="text"
                android:hint="@string/sid_placeholder"
                android:textColorHint="@color/slightGrey"
                app:backgroundTint="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alias" />

            <EditText
                android:id="@+id/alfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4sp"
                android:layout_marginRight="-4sp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:maxLength="100"
                android:inputType="text"
                android:hint="@string/al_placeholder"
                android:textColorHint="@color/slightGrey"
                app:backgroundTint="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/pasfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4sp"
                android:layout_marginRight="-4sp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:inputType="textPassword"
                android:hint="@string/pas_placeholder"
                android:textColorHint="@color/slightGrey"
                app:backgroundTint="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10sp"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/isubmit"
                android:textStyle="normal"
                android:textColor="@color/pureBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4sp"
                android:layout_marginRight="-4sp"
                android:text="@string/sign_in"
                android:textAllCaps="true" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>